# src/modules/question/question.controller.ts
@@ -1,6 +1,7 @@
 import { TypedBody, TypedParam, TypedQuery, TypedRoute } from '@nestia/core';
 import { Controller, UseGuards } from '@nestjs/common';
 import { ApiBearerAuth, ApiTags } from '@nestjs/swagger';
+import { User } from 'src/common/decorators/user.decorators';
 import { JwtAuthGuard } from '../../common/guards/jwt.guard';
 import { RoleGuard } from '../../common/guards/role.guard';
 import {
@@ -23,16 +24,26 @@ export class QuestionController {
   }
 
   @TypedRoute.Post()
-  async createQuestion(@TypedBody() data: CreateQuestionDto) {
-    return await this.questionService.createQuestion(data);
+  async createQuestion(
+    @User() UserName: string,
+    @TypedBody() data: CreateQuestionDto,
+  ) {
+    return await this.questionService.createQuestion({
+      ...data,
+      createdBy: UserName,
+    });
   }
 
   @TypedRoute.Put(':id')
   async updateQuestion(
+    @User() UserName: string,
     @TypedParam('id') id: string,
     @TypedBody() data: UpdateQuestionDto,
   ) {
-    return await this.questionService.updateQuestion(id, data);
+    return await this.questionService.updateQuestion(id, {
+      ...data,
+      lastUpdatedBy: UserName,
+    });
   }
 
   @TypedRoute.Delete(':id')
